# telega_main_app

./: .gitmodules  CMakeLists.txt  README.md
include/io/: canbus.h
include/log/: log.h
include/netlink/: netlink.h
include/proto/: vesc_proto.h
include/svc/: crc.h  platform.h
src/: CMakeLists.txt  main.c
src/app/: CMakeLists.txt  audio.c  audio_stream.c  gps.c  main.c  minmea.c  motion.c  network_status.c  power.c  system_telemetry.c  telemetry.c  video.c  voicestream.c
src/app/include/private/: audio.h  gps.h  motion.h  network_status.h  power.h  sensors.h  system_telemetry.h  telemetry.h  video.h  voicestream.h
src/libio/: CMakeLists.txt  canbus.c
src/liblog/: CMakeLists.txt
src/liblog/include/private/: format.h
src/libnetlink/: CMakeLists.txt  link_list.c
src/libnetlink/include/private/: nl.h
src/libsvc/: CMakeLists.txt  crc.c  sharedmem.c
